2005-11-26 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b36

 * Fix: Commenting was broken when comments_addType was 'inside'
   Thanks to Toastmaster from forums.

2005-11-25 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b35

 * Fix: Missing formvalues in view_photo.php when only one Service is selected.
   Thanks to icerunner from forums.

2005-11-25 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b34

 * Change: Got almost definitely rid of an old relict :)

2005-11-25 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b33

 * Change: Little performance tweak for ImCmd(). Use static var for IM Version.

2005-11-23 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b32

 * Change: Add possibility to delete album via "main" album options selectbox.

2005-11-22 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b31 "Holly Release Part 2"

 * NEW: Added possibility to add imagemaps (areas) to a photo.

 * Fix: Alignment breadcrumb

 * Fix: Missing echo in drawCommentAddForm().

 * Fix: Sorting content of album was broken.
   Thanks to Brian Rademacher !

 * Change: Layout of icons in view_photo.php

 * Change: Added 'pure_text' field to albumItem options for sorting.

 * Change: Prevent unnecessarey Javacript when getting albumItem options.

2005-11-06 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b30

 * Change: Lots of translation related things.
  - Change a lot _() to gTranslate()
  - wording
  - introdcued common translation file
  - added download.php and includes/add_photos/captionOptions.inc.php to list of translated files 

 * Change: Little Layout change in delete_album.php and rearrange.php
 
 * Change: Wording and checks in download.php
 
2005-11-05 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b29

 * Change: List of owner is now sorted again alphabetically.

 * Change: Mark Pseudousers with * around in permission dialog.

 * Change: Wordings.

 * Fix: xgettext keyword parameter to catch gTranslate.

 * Fix: Missing , in setup/check_versions.php

2005-11-04 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b28
